<?xml version="1.0" encoding="utf-8"?>

<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/chkDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"/>

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Task 1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"/>

</android.widget.LinearLayout>